2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed method signature:
	PieceStorage::getInFlightPieces
	* src/DefaultBtProgressInfoFile.cc
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/PieceStorage.h
	* src/UnknownLengthPieceStorage.cc
	* src/UnknownLengthPieceStorage.h
	* test/DefaultBtProgressInfoFileTest.cc
	* test/MockPieceStorage.h

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed method signature:
	PostDownloadHandler::getNextRequestGroups
	Metalink2RequestGroup::generate
	RequestGroup::postDownloadProcessing
	* src/BtPostDownloadHandler.cc
	* src/BtPostDownloadHandler.h
	* src/Metalink2RequestGroup.cc
	* src/Metalink2RequestGroup.h
	* src/MetalinkPostDownloadHandler.cc
	* src/MetalinkPostDownloadHandler.h
	* src/PostDownloadHandler.h
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/RequestGroupMan.cc
	* src/main.cc
	* test/BtPostDownloadHandlerTest.cc
	* test/Metalink2RequestGroupTest.cc
	* test/MetalinkPostDownloadHandlerTest.cc
	
2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten AccRequestGroup
	* src/main.cc

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten.
	* src/TaggedItem.cc (toTagString)

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten Accept-Features handling.
	* src/HttpRequestCommand.cc (createHttpRequest)

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten accept types handling.
	* HttpRequest.cc (createRequest)

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten
	* src/FeatureConfig.cc (featureSummary)

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed method signature:
	PeerStorage::getActivePeers
	* src/DHTPeerAnnounceEntry.cc
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/PeerStorage.h
	* test/DefaultPeerStorageTest.cc
	* test/MockPeerStorage.h

2008-05-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
